# Kinit

./: Cargo.toml  Makefile  README.md
docs/: MODULES.md
examples/: desktop.conf  minimal.conf
scripts/: build-initramfs.sh  create-iso.sh
src/: main.rs
src/core/: config.rs  init.rs  mod.rs  service.rs  shutdown.rs
src/modules/: crypto.rs  devices.rs  fstab.rs  mod.rs  network.rs  recovery.rs
src/modules/desktop/: dbus.rs  display.rs  logind.rs  mod.rs  udisks.rs
