[package]
name = "Kinit"
version = "0.4.0"
edition = "2021"
description = "Minimal, secure, modular init system for servers and desktops"
license = "GPL-3.0-or-later"
repository = "https://github.com/nanbugokwa/Kinit"

[features]
default = ["server"]
server = ["platform-linux", "modules-fstab", "modules-devices", "modules-network"]
desktop = ["server", "modules-desktop"]
tpm = ["dep-sha2"]
luks = []
cgroups = []
recovery = []

platform-linux = []
modules-fstab = []
modules-devices = []
modules-network = []
modules-desktop = []

[dependencies]
nix = { version = "0.29", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
libc = { version = "0.2", default-features = false, features = ["extra"] }
